<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="example.geva.com.ui.InstructionsActivity"
    android:background="@drawable/background2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleView"
            android:background="@drawable/psicanagrammer"
            android:contentDescription="@string/title"
            android:adjustViewBounds="false" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:id="@+id/scrollView"
            android:layout_weight="1">

            <TextView android:text="@string/instructions1" android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:id="@+id/intructionsTextView" />
        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readyLabelButton"
            android:id="@+id/startAnagramsButton"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:onClick="beginTest" />
    </LinearLayout>

</RelativeLayout>
