<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="psicanagrammer.gevapps.com.psicanagrammer.ui.QuestionsActivity"
    android:background="@drawable/background2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleView"
            android:background="@drawable/psicanagrammer"
            android:contentDescription="@string/title"
            android:adjustViewBounds="false" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@android:id/list" />
            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@android:id/empty"
                android:text="@string/emptyQuestionsList"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endQuestionsLabelButton"
                android:id="@+id/endQuestionsButton"
                android:gravity="center"
                android:onClick="endQuestions"
                android:layout_gravity="center|bottom" />
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
